--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
+    "lucide": "^0.271.0",
     "lucide-react": "^0.271.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
